--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 1,
    "id": "5de52fe5-7e74-43bc-8b5e-a29f6c1dbaf6",
    "metadata": {},
    "outputs": [],
@@ -17,11 +17,21 @@
   {
    "cell_type": "markdown",
    "id": "f6f6f904-4bed-4b81-80a6-9aed9451034f",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Submission Format"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa205541-f00c-4970-9075-eb0e7a3ddfe5",
+   "metadata": {},
+   "source": [
+    "We will use the following to convert csv files to the json format used for the evaluation.\n",
+    "\n",
+    "We first transform the test set (validation till test solutions are not released).\n",
+    "\n",
+    "For the evaluation soft labels, we use the mean of the annotator aggregations, with possible values (0, 1/3, 2/3, 1)."
    ]
   },
   {
@@ -39,18 +49,6 @@
     "    implicit = row[stereo] * row[imp]\n",
     "    explicit = row[stereo] * (1 - row[imp])\n",
     "    return {\"Implicit\": implicit, \"Explicit\": explicit, \"NoStreotype\": 1 - row[stereo]}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa205541-f00c-4970-9075-eb0e7a3ddfe5",
-   "metadata": {},
-   "source": [
-    "We will use the following to convert csv files to the json format used for the evaluation\n",
-    "\n",
-    "We first transform the test set (validation till test solutions are not released).\n",
-    "\n",
-    "For the evaluation soft labels, we use the mean of the annotator aggregations, with possible values (0, 1/3, 2/3, 1)."
    ]
   },
   {
@@ -209,26 +207,77 @@
   {
    "cell_type": "markdown",
    "id": "3cd0fa68-ff95-432c-8dda-cd0005d9a1a6",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 2,
    "id": "770961ea-8ebe-48a6-9385-33f0848e4b91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evaluation import evaluate"
+    "from evaluation import evaluate, main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "073ce54f-fe00-41eb-abe5-ee97e5609e27",
+   "metadata": {},
+   "source": [
+    "Here we provide an example of the metrics for the 4 tasks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 3,
+   "id": "947fb4bf-afa3-44bf-a534-bb9a8beaf284",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-04-17 15:53:24,604 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['FMeasure', 'Precision', 'Recall']\n",
+      "2024-04-17 15:53:24,611 - pyevall.metrics.metrics - INFO -             evaluate() - Executing fmeasure evaluation method\n",
+      "2024-04-17 15:53:24,612 - pyevall.metrics.metrics - INFO -             evaluate() - Executing precision evaluation method\n",
+      "2024-04-17 15:53:24,613 - pyevall.metrics.metrics - INFO -             evaluate() - Executing recall evaluation method\n",
+      "Task 1 Hard Labels {'F1': 0.8}\n",
+      "2024-04-17 15:53:24,613 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['CrossEntropy']\n",
+      "2024-04-17 15:53:24,618 - pyevall.metrics.metrics - INFO -             evaluate() - Executing Cross Entropy evaluation method\n",
+      "Task 1 Soft Labels {'Cross Entropy': 1.5808285223439784}\n",
+      "2024-04-17 15:53:24,619 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['ICMSoft', 'ICMSoftNorm']\n",
+      "2024-04-17 15:53:24,623 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
+      "2024-04-17 15:53:24,626 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM-Soft Normalized evaluation method\n",
+      "2024-04-17 15:53:24,626 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
+      "2024-04-17 15:53:24,629 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
+      "Task 2 Hard Labels {'ICM Soft': -10.576490286434076, 'ICM Soft Norm': 0}\n",
+      "2024-04-17 15:53:24,632 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['ICM', 'ICMNorm']\n",
+      "2024-04-17 15:53:24,637 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
+      "2024-04-17 15:53:24,637 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Normalized evaluation method\n",
+      "2024-04-17 15:53:24,637 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
+      "2024-04-17 15:53:24,638 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
+      "Task 2 Soft Labels {'ICM': -2.9605947323337506e-16, 'ICM Norm': 0.49999999999999983}\n"
+     ]
+    }
+   ],
+   "source": [
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "177da819-2ad2-413b-8628-772954c55875",
+   "metadata": {},
+   "source": [
+    "You may try them with the baselines or your own models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "b6ac8c7d-b580-4818-a2f7-06150282c290",
    "metadata": {},
    "outputs": [
@@ -236,82 +285,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-04-16 18:49:14,411 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['FMeasure', 'Precision', 'Recall']\n",
-      "2024-04-16 18:49:14,478 - pyevall.metrics.metrics - INFO -             evaluate() - Executing fmeasure evaluation method\n",
-      "2024-04-16 18:49:14,717 - pyevall.metrics.metrics - INFO -             evaluate() - Executing precision evaluation method\n",
-      "2024-04-16 18:49:14,718 - pyevall.metrics.metrics - INFO -             evaluate() - Executing recall evaluation method\n",
-      "{\n",
-      "  \"metrics\": {\n",
-      "    \"FMeasure\": {\n",
-      "      \"name\": \"F-Measure\",\n",
-      "      \"acronym\": \"F1\",\n",
-      "      \"description\": \"Coming soon!\",\n",
-      "      \"status\": \"OK\",\n",
-      "      \"results\": {\n",
-      "        \"test_cases\": [{\n",
-      "          \"name\": \"DETESTS-Dis\",\n",
-      "          \"classes\": {\n",
-      "            \"NoStereotype\": 0.7403087478559177,\n",
-      "            \"Stereotype\": 0.27698185291308497\n",
-      "          },\n",
-      "          \"average\": 0.5086453003845013\n",
-      "        }],\n",
-      "        \"average_per_test_case\": 0.5086453003845013\n",
-      "      }\n",
-      "    },\n",
-      "    \"Precision\": {\n",
-      "      \"name\": \"Precision\",\n",
-      "      \"acronym\": \"Pr\",\n",
-      "      \"description\": \"Coming soon!\",\n",
-      "      \"status\": \"OK\",\n",
-      "      \"results\": {\n",
-      "        \"test_cases\": [{\n",
-      "          \"name\": \"DETESTS-Dis\",\n",
-      "          \"classes\": {\n",
-      "            \"NoStereotype\": 0.7345132743362832,\n",
-      "            \"Stereotype\": 0.283203125\n",
-      "          },\n",
-      "          \"average\": 0.5088581996681416\n",
-      "        }],\n",
-      "        \"average_per_test_case\": 0.5088581996681416\n",
-      "      }\n",
-      "    },\n",
-      "    \"Recall\": {\n",
-      "      \"name\": \"Recall\",\n",
-      "      \"acronym\": \"Re\",\n",
-      "      \"description\": \"Coming soon!\",\n",
-      "      \"status\": \"OK\",\n",
-      "      \"results\": {\n",
-      "        \"test_cases\": [{\n",
-      "          \"name\": \"DETESTS-Dis\",\n",
-      "          \"classes\": {\n",
-      "            \"NoStereotype\": 0.7461964038727524,\n",
-      "            \"Stereotype\": 0.27102803738317754\n",
-      "          },\n",
-      "          \"average\": 0.508612220627965\n",
-      "        }],\n",
-      "        \"average_per_test_case\": 0.508612220627965\n",
-      "      }\n",
-      "    }\n",
-      "  },\n",
-      "  \"files\": {\n",
-      "    \"tfidf_svc_t1_hard.json\": {\n",
-      "      \"name\": \"tfidf_svc_t1_hard.json\",\n",
-      "      \"status\": \"OK\",\n",
-      "      \"gold\": false,\n",
-      "      \"description\": \"Use parameter: report=\\\"embedded\\\"!\",\n",
-      "      \"errors\": {}\n",
-      "    },\n",
-      "    \"validation_t1_hard.json\": {\n",
-      "      \"name\": \"validation_t1_hard.json\",\n",
-      "      \"status\": \"OK\",\n",
-      "      \"gold\": true,\n",
-      "      \"description\": \"Use parameter: report=\\\"embedded\\\"!\",\n",
-      "      \"errors\": {}\n",
-      "    }\n",
-      "  }\n",
-      "}\n"
+      "2024-04-17 15:54:15,786 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['FMeasure', 'Precision', 'Recall']\n",
+      "2024-04-17 15:54:15,850 - pyevall.metrics.metrics - INFO -             evaluate() - Executing fmeasure evaluation method\n",
+      "2024-04-17 15:54:16,086 - pyevall.metrics.metrics - INFO -             evaluate() - Executing precision evaluation method\n",
+      "2024-04-17 15:54:16,086 - pyevall.metrics.metrics - INFO -             evaluate() - Executing recall evaluation method\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'F1': 0.27698185291308497}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -322,71 +310,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "id": "e1307012-6494-4949-90d1-bb3fd58db4b9",
+   "execution_count": 5,
+   "id": "278ad914-f4d0-4657-aabc-76f6189117c5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-04-16 18:49:14,910 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['ICMSoft', 'ICMSoftNorm']\n",
-      "2024-04-16 18:49:15,091 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
-      "2024-04-16 18:49:15,735 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM-Soft Normalized evaluation method\n",
-      "2024-04-16 18:49:15,735 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
-      "2024-04-16 18:49:16,485 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
-      "{\n",
-      "  \"metrics\": {\n",
-      "    \"ICMSoft\": {\n",
-      "      \"name\": \"Information Contrast Model Soft\",\n",
-      "      \"acronym\": \"ICM-Soft\",\n",
-      "      \"description\": \"Coming soon!\",\n",
-      "      \"status\": \"OK\",\n",
-      "      \"results\": {\n",
-      "        \"test_cases\": [{\n",
-      "          \"name\": \"DETESTS-Dis\",\n",
-      "          \"average\": -1.1243255840284248\n",
-      "        }],\n",
-      "        \"average_per_test_case\": -1.1243255840284248\n",
-      "      }\n",
-      "    },\n",
-      "    \"ICMSoftNorm\": {\n",
-      "      \"name\": \"Normalized Information Contrast Model Soft\",\n",
-      "      \"acronym\": \"ICM-Soft-Norm\",\n",
-      "      \"description\": \"Coming soon!\",\n",
-      "      \"status\": \"OK\",\n",
-      "      \"results\": {\n",
-      "        \"test_cases\": [{\n",
-      "          \"name\": \"DETESTS-Dis\",\n",
-      "          \"average\": 0.3791346881412047\n",
-      "        }],\n",
-      "        \"average_per_test_case\": 0.3791346881412047\n",
-      "      }\n",
-      "    }\n",
-      "  },\n",
-      "  \"files\": {\n",
-      "    \"beto_t2_soft.json\": {\n",
-      "      \"name\": \"beto_t2_soft.json\",\n",
-      "      \"status\": \"OK\",\n",
-      "      \"gold\": false,\n",
-      "      \"description\": \"Use parameter: report=\\\"embedded\\\"!\",\n",
-      "      \"errors\": {}\n",
-      "    },\n",
-      "    \"test_t2_soft.json\": {\n",
-      "      \"name\": \"test_t2_soft.json\",\n",
-      "      \"status\": \"OK\",\n",
-      "      \"gold\": true,\n",
-      "      \"description\": \"Use parameter: report=\\\"embedded\\\"!\",\n",
-      "      \"errors\": {}\n",
-      "    }\n",
-      "  }\n",
-      "}\n"
+      "2024-04-17 15:54:16,161 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['ICM', 'ICMNorm']\n",
+      "2024-04-17 15:54:16,229 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
+      "2024-04-17 15:54:16,474 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Normalized evaluation method\n",
+      "2024-04-17 15:54:16,475 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
+      "2024-04-17 15:54:16,717 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'ICM': 0.04972717204505462, 'ICM Norm': 0.5223741437225744}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred = \"baselines/beto_t2_soft.json\"\n",
-    "gold = \"data/test_t2_soft.json\"\n",
+    "pred = \"baselines/validation/tfidf_svc_t2_hard.json\"\n",
+    "gold = \"data/validation_t2_hard.json\"\n",
     "evaluate(pred, gold)"
    ]
   }
