baselines/test folder

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4d236e9a-672f-4122-af6c-d634c0d2de11",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 3,
    "id": "a296d7e5-2894-49a4-a92b-638b9edeeae1",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 4,
    "id": "8d2097da-f07e-422c-9d54-0f159be9d377",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 5,
    "id": "d1362b76-41e7-481d-b8ba-b94cf2e0dfe7",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 6,
    "id": "3aa7828a-2d90-47c5-93d1-a1580073fbb9",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 7,
    "id": "1c13e2d9-70bf-48f6-9d70-306effd1d97a",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 8,
    "id": "379b5c74-af14-4adc-92e4-55d2ed51fe4e",
    "metadata": {},
    "outputs": [],
@@ -201,6 +201,18 @@
     "    json_t1_soft(file)\n",
     "\n",
     "for file in glob.glob(\"baselines/validation/*_t2_soft.csv\"):\n",
+    "    json_t2_soft(file)\n",
+    "    \n",
+    "for file in glob.glob(\"baselines/test/*_t1_hard.csv\"):\n",
+    "    json_t1_hard(file)\n",
+    "\n",
+    "for file in glob.glob(\"baselines/test/*_t2_hard.csv\"):\n",
+    "    json_t2_hard(file)\n",
+    "\n",
+    "for file in glob.glob(\"baselines/test/*_t1_soft.csv\"):\n",
+    "    json_t1_soft(file)\n",
+    "\n",
+    "for file in glob.glob(\"baselines/test/*_t2_soft.csv\"):\n",
     "    json_t2_soft(file)"
    ]
   },
@@ -214,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "770961ea-8ebe-48a6-9385-33f0848e4b91",
    "metadata": {},
    "outputs": [],
@@ -232,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "947fb4bf-afa3-44bf-a534-bb9a8beaf284",
    "metadata": {},
    "outputs": [
@@ -240,25 +252,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-04-17 15:53:24,604 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['FMeasure', 'Precision', 'Recall']\n",
-      "2024-04-17 15:53:24,611 - pyevall.metrics.metrics - INFO -             evaluate() - Executing fmeasure evaluation method\n",
-      "2024-04-17 15:53:24,612 - pyevall.metrics.metrics - INFO -             evaluate() - Executing precision evaluation method\n",
-      "2024-04-17 15:53:24,613 - pyevall.metrics.metrics - INFO -             evaluate() - Executing recall evaluation method\n",
+      "2024-04-17 17:45:10,551 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['FMeasure', 'Precision', 'Recall']\n",
+      "2024-04-17 17:45:10,560 - pyevall.metrics.metrics - INFO -             evaluate() - Executing fmeasure evaluation method\n",
+      "2024-04-17 17:45:10,562 - pyevall.metrics.metrics - INFO -             evaluate() - Executing precision evaluation method\n",
+      "2024-04-17 17:45:10,562 - pyevall.metrics.metrics - INFO -             evaluate() - Executing recall evaluation method\n",
       "Task 1 Hard Labels {'F1': 0.8}\n",
-      "2024-04-17 15:53:24,613 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['CrossEntropy']\n",
-      "2024-04-17 15:53:24,618 - pyevall.metrics.metrics - INFO -             evaluate() - Executing Cross Entropy evaluation method\n",
+      "2024-04-17 17:45:10,563 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['CrossEntropy']\n",
+      "2024-04-17 17:45:10,567 - pyevall.metrics.metrics - INFO -             evaluate() - Executing Cross Entropy evaluation method\n",
       "Task 1 Soft Labels {'Cross Entropy': 1.5808285223439784}\n",
-      "2024-04-17 15:53:24,619 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['ICMSoft', 'ICMSoftNorm']\n",
-      "2024-04-17 15:53:24,623 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
-      "2024-04-17 15:53:24,626 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM-Soft Normalized evaluation method\n",
-      "2024-04-17 15:53:24,626 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
-      "2024-04-17 15:53:24,629 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
+      "2024-04-17 17:45:10,568 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['ICMSoft', 'ICMSoftNorm']\n",
+      "2024-04-17 17:45:10,573 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
+      "2024-04-17 17:45:10,576 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM-Soft Normalized evaluation method\n",
+      "2024-04-17 17:45:10,576 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
+      "2024-04-17 17:45:10,579 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Soft evaluation method\n",
       "Task 2 Hard Labels {'ICM Soft': -10.576490286434076, 'ICM Soft Norm': 0}\n",
-      "2024-04-17 15:53:24,632 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['ICM', 'ICMNorm']\n",
-      "2024-04-17 15:53:24,637 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
-      "2024-04-17 15:53:24,637 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Normalized evaluation method\n",
-      "2024-04-17 15:53:24,637 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
-      "2024-04-17 15:53:24,638 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
+      "2024-04-17 17:45:10,582 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['ICM', 'ICMNorm']\n",
+      "2024-04-17 17:45:10,586 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
+      "2024-04-17 17:45:10,587 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Normalized evaluation method\n",
+      "2024-04-17 17:45:10,587 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
+      "2024-04-17 17:45:10,588 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
       "Task 2 Soft Labels {'ICM': -2.9605947323337506e-16, 'ICM Norm': 0.49999999999999983}\n"
      ]
     }
@@ -277,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "b6ac8c7d-b580-4818-a2f7-06150282c290",
    "metadata": {},
    "outputs": [
@@ -285,10 +297,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-04-17 15:54:15,786 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['FMeasure', 'Precision', 'Recall']\n",
-      "2024-04-17 15:54:15,850 - pyevall.metrics.metrics - INFO -             evaluate() - Executing fmeasure evaluation method\n",
-      "2024-04-17 15:54:16,086 - pyevall.metrics.metrics - INFO -             evaluate() - Executing precision evaluation method\n",
-      "2024-04-17 15:54:16,086 - pyevall.metrics.metrics - INFO -             evaluate() - Executing recall evaluation method\n"
+      "2024-04-17 17:45:11,903 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['FMeasure', 'Precision', 'Recall']\n",
+      "2024-04-17 17:45:11,970 - pyevall.metrics.metrics - INFO -             evaluate() - Executing fmeasure evaluation method\n",
+      "2024-04-17 17:45:12,220 - pyevall.metrics.metrics - INFO -             evaluate() - Executing precision evaluation method\n",
+      "2024-04-17 17:45:12,221 - pyevall.metrics.metrics - INFO -             evaluate() - Executing recall evaluation method\n"
      ]
     },
     {
@@ -297,7 +309,7 @@
        "{'F1': 0.27698185291308497}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "278ad914-f4d0-4657-aabc-76f6189117c5",
    "metadata": {},
    "outputs": [
@@ -318,11 +330,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-04-17 15:54:16,161 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['ICM', 'ICMNorm']\n",
-      "2024-04-17 15:54:16,229 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
-      "2024-04-17 15:54:16,474 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Normalized evaluation method\n",
-      "2024-04-17 15:54:16,475 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
-      "2024-04-17 15:54:16,717 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n"
+      "2024-04-17 17:45:13,255 - pyevall.evaluation - INFO -             evaluate() - Evaluating the following metrics ['ICM', 'ICMNorm']\n",
+      "2024-04-17 17:45:13,322 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
+      "2024-04-17 17:45:13,564 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM Normalized evaluation method\n",
+      "2024-04-17 17:45:13,564 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n",
+      "2024-04-17 17:45:13,807 - pyevall.metrics.metrics - INFO -             evaluate() - Executing ICM evaluation method\n"
      ]
     },
     {
@@ -331,7 +343,7 @@
        "{'ICM': 0.04972717204505462, 'ICM Norm': 0.5223741437225744}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
