--- a/beto_baselines.ipynb
+++ b/beto_baselines.ipynb
@@ -153,7 +153,7 @@
     "predictions = trainer.predict(tok_test)\n",
     "results = test[[\"id\"]].copy()\n",
     "results[\"stereotype\"] = np.argmax(predictions[0], axis=1)\n",
-    "results.to_csv(\"baselines/beto_t1_hard.csv\", index=False)"
+    "results.to_csv(\"baselines/test/beto_t1_hard.csv\", index=False)"
    ]
   },
   {
@@ -216,7 +216,7 @@
     "results2 = results.copy()\n",
     "results2[\"implicit\"] = 0\n",
     "results2.loc[test[\"stereotype_pred\"] == 1, \"implicit\"] = np.argmax(predictions[0], axis=1)\n",
-    "results2.to_csv(\"baselines/beto_t2_hard.csv\", index=False)"
+    "results2.to_csv(\"baselines/test/beto_t2_hard.csv\", index=False)"
    ]
   },
   {
@@ -266,7 +266,7 @@
     "predictions = trainer.predict(tok_test)\n",
     "results = test[[\"id\"]].copy()\n",
     "results[\"stereotype\"] = np.clip(predictions[0], 0, 1)\n",
-    "results.to_csv(\"baselines/beto_t1_soft.csv\", index=False)"
+    "results.to_csv(\"baselines/test/beto_t1_soft.csv\", index=False)"
    ]
   },
   {
@@ -323,7 +323,7 @@
     "results2 = results.copy()\n",
     "results2[\"implicit\"] = 0.0\n",
     "results2.loc[test[\"stereotype_pred\"] > 0.5, \"implicit\"] = np.clip(predictions[0], 0, 1)\n",
-    "results2.to_csv(\"baselines/beto_t2_soft.csv\", index=False)"
+    "results2.to_csv(\"baselines/test/beto_t2_soft.csv\", index=False)"
    ]
   }
  ],
