--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -89,7 +89,7 @@
    "id": "4ef9c4fa-53c5-4e4a-bd1c-1620124b5c46",
    "metadata": {},
    "source": [
-    "We create a validation partition"
+    "We create a validation partition. This is just a random partition, without taking into account the thread structure as we did in the train/test partition."
    ]
   },
   {
@@ -202,7 +202,7 @@
     "\n",
     "for file in glob.glob(\"baselines/validation/*_t2_soft.csv\"):\n",
     "    json_t2_soft(file)\n",
-    "    \n",
+    "\n",
     "for file in glob.glob(\"baselines/test/*_t1_hard.csv\"):\n",
     "    json_t1_hard(file)\n",
     "\n",
