--- a/beto_baselines.ipynb
+++ b/beto_baselines.ipynb
@@ -34,7 +34,7 @@
    "id": "e3e75401-f727-43ac-9007-803580221119",
    "metadata": {},
    "source": [
-    "We create a validation partition, which we also use as an example for the evaluation"
+    "We create a validation partition, which we also use as an example for the evaluation. This is just a random partition, without taking into account the thread structure as we did in the train/test partition."
    ]
   },
   {
