--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -42,13 +42,13 @@
    "outputs": [],
    "source": [
     "def soft_dict_t1(stereo):\n",
-    "    return {\"Stereotype\": stereo, \"NoStreotype\": 1 - stereo}\n",
+    "    return {\"Stereotype\": stereo, \"NoStereotype\": 1 - stereo}\n",
     "\n",
     "\n",
     "def soft_dict_t2(row, stereo=\"stereotype\", imp=\"implicit\"):\n",
     "    implicit = row[stereo] * row[imp]\n",
     "    explicit = row[stereo] * (1 - row[imp])\n",
-    "    return {\"Implicit\": implicit, \"Explicit\": explicit, \"NoStreotype\": 1 - row[stereo]}"
+    "    return {\"Implicit\": implicit, \"Explicit\": explicit, \"NoStereotype\": 1 - row[stereo]}"
    ]
   },
   {
